<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="character_photo_image_description">Character photo</string>

    <string name="character_detail_status">Status:</string>
    <string name="character_detail_species">Species:</string>
    <string name="character_detail_type">Type:</string>
    <string name="character_detail_gender">Gender:</string>
    <string name="character_detail_origin">Origin:</string>
    <string name="character_detail_episodes">Episodes:</string>

    <string name="episode_detail_air_date">Air Date:</string>
    <string name="episode_detail_episode">Episode code:</string>
    <string name="episode_detail_characters">Characters:</string>

    <string name="location_detail_type">Type:</string>
    <string name="location_detail_dimension">Dimension:</string>
    <string name="location_detail_residents">Residents:</string>

    <string name="menu_characters">Characters</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_episodes">Episodes</string>
</resources>
