<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/char_detail_fragment_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/char_detail_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:text="Name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_status"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_detail_fragment_name" />

    <TextView
        android:id="@+id/char_detail_fragment_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/status"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toTopOf="@id/status"
        tools:text="Alive" />

    <TextView
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_species"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <TextView
        android:id="@+id/char_detail_fragment_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/species"
        app:layout_constraintStart_toEndOf="@id/species"
        app:layout_constraintTop_toTopOf="@id/species"
        tools:text="Human" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_type"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/species" />

    <TextView
        android:id="@+id/char_detail_fragment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/type"
        app:layout_constraintStart_toEndOf="@id/type"
        app:layout_constraintTop_toTopOf="@id/type"
        tools:text="type" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_gender"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/char_detail_fragment_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/gender"
        app:layout_constraintStart_toEndOf="@id/gender"
        app:layout_constraintTop_toTopOf="@id/gender"
        tools:text="Female" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_origin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <TextView
        android:id="@+id/char_detail_fragment_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/origin"
        app:layout_constraintStart_toEndOf="@id/origin"
        app:layout_constraintTop_toTopOf="@id/origin"
        tools:text="Earth" />

    <TextView
        android:id="@+id/episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_detail_episodes"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/origin" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/char_detail_fragment_episodes_rv"
       android:layout_width="match_parent"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       android:orientation="horizontal"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       tools:listitem="@layout/char_episode_card_item"
       app:layout_constraintTop_toBottomOf="@id/episodes"
       android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>