<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/episode_detail_fragment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pilot" />

    <TextView
        android:id="@+id/air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_detail_air_date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/episode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_detail_fragment_name" />

    <TextView
        android:id="@+id/episode_detail_fragment_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/air_date"
        app:layout_constraintStart_toEndOf="@id/air_date"
        app:layout_constraintTop_toTopOf="@id/air_date"
        tools:text="December 2, 2013" />

    <TextView
        android:id="@+id/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_detail_episode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/characters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_date" />

    <TextView
        android:id="@+id/episode_detail_fragment_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/episode"
        app:layout_constraintStart_toEndOf="@id/episode"
        app:layout_constraintTop_toTopOf="@id/episode"
        tools:text="S01E01" />

    <TextView
        android:id="@+id/characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_detail_characters"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episode_detail_fragment_characters_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>